CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(LIBRARY_NAME evolve_ga)
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_C_FLAGS_DEBUG "-Wall -g")
SET(CMAKE_C_FLAGS_RELEASE "-Wall -DNDEBUG")

INCLUDE_DIRECTORIES(../../include)

LINK_DIRECTORIES(/usr/local/lib)
LINK_DIRECTORIES(/usr/lib)

# evolve_ga library
ADD_LIBRARY(
    ${LIBRARY_NAME}

    crossover.c
    mutation.c
)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} m)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} al)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} dstruct)
